# coraza-rs

./: CRS_TEST_COVERAGE.md  Cargo.toml  PORTING_LOG.md  README.md
.github/workflows/: rust.yml
examples/: simple.rs
src/: config.rs  lib.rs  waf.rs
src/actions/: ctl.rs  deferred.rs  disruptive.rs  flow.rs  logging.rs  metadata.rs  mod.rs  special.rs  variables.rs
src/body_processors/: json.rs  mod.rs  multipart.rs  raw.rs  urlencoded.rs  xml.rs
src/body_processors/multipart/: mod.rs  parser.rs
src/collection/: concat.rs  map.rs  mod.rs  noop.rs  single.rs
src/operators/: ip.rs  macros.rs  mod.rs  pattern.rs  simple.rs  validation.rs
src/rules/: action.rs  group.rs  mod.rs  operator.rs  rule.rs  transformation.rs  variable.rs
src/seclang/: action_parser.rs  mod.rs  operator_parser.rs  parser.rs  rule_compiler.rs  variable_parser.rs  waf_config.rs
src/transaction/: mod.rs  variables.rs
src/transformations/: complex.rs  encoding.rs  escape.rs  mod.rs  simple.rs
src/types/: mod.rs  phase.rs  severity.rs  variables.rs  waf.rs
src/utils/: mod.rs  strings.rs
tests/: crs_compatibility.rs  e2e_seclang.rs  e2e_tests.rs  http_integration.rs  rule_engine.rs  seclang.rs  transaction_integration.rs  waf_lifecycle.rs
tests/e2e/: mod.rs
