[package]
name = "coraza"
version = "0.1.0"
edition = "2024"

[dependencies]
# Lightweight, fast random number generator (no dependencies)
fastrand = "2.0"

# Cryptographic hash functions (RustCrypto)
md-5 = "0.10"
sha1 = "0.10"

# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# IP address and network utilities
ipnet = "2.9"

# HTML entity decoding
htmlescape = "0.3"

# Path normalization
path-clean = "1.0"

# Glob pattern matching for file includes
glob = "0.3"
